libqt6c/src/libqlcdnumber.hpp

#pragma once
#ifndef SRCC_LIBQLCDNUMBER_HPP
#define SRCC_LIBQLCDNUMBER_HPP

#include <stdbool.h>
#include <stddef.h>

#pragma GCC diagnostic ignored "-Wdeprecated-declarations"

#include "qtlibc.h"

#ifdef __cplusplus
extern "C" {
#endif

#ifdef __cplusplus
#else
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QFrame QFrame;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QLCDNumber QLCDNumber;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionFrame QStyleOptionFrame;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
#endif

QLCDNumber* QLCDNumber_new(QWidget* parent);
QLCDNumber* QLCDNumber_new2();
QLCDNumber* QLCDNumber_new3(unsigned int numDigits);
QLCDNumber* QLCDNumber_new4(unsigned int numDigits, QWidget* parent);
QMetaObject* QLCDNumber_MetaObject(const QLCDNumber* self);
void* QLCDNumber_Metacast(QLCDNumber* self, const char* param1);
int QLCDNumber_Metacall(QLCDNumber* self, int param1, int param2, void** param3);
bool QLCDNumber_SmallDecimalPoint(const QLCDNumber* self);
int QLCDNumber_DigitCount(const QLCDNumber* self);
void QLCDNumber_SetDigitCount(QLCDNumber* self, int nDigits);
bool QLCDNumber_CheckOverflow(const QLCDNumber* self, double num);
bool QLCDNumber_CheckOverflow2(const QLCDNumber* self, int num);
int QLCDNumber_Mode(const QLCDNumber* self);
void QLCDNumber_SetMode(QLCDNumber* self, int mode);
int QLCDNumber_SegmentStyle(const QLCDNumber* self);
void QLCDNumber_SetSegmentStyle(QLCDNumber* self, int segmentStyle);
double QLCDNumber_Value(const QLCDNumber* self);
int QLCDNumber_IntValue(const QLCDNumber* self);
QSize* QLCDNumber_SizeHint(const QLCDNumber* self);
void QLCDNumber_Display(QLCDNumber* self, const libqt_string str);
void QLCDNumber_Display2(QLCDNumber* self, int num);
void QLCDNumber_Display3(QLCDNumber* self, double num);
void QLCDNumber_SetHexMode(QLCDNumber* self);
void QLCDNumber_SetDecMode(QLCDNumber* self);
void QLCDNumber_SetOctMode(QLCDNumber* self);
void QLCDNumber_SetBinMode(QLCDNumber* self);
void QLCDNumber_SetSmallDecimalPoint(QLCDNumber* self, bool smallDecimalPoint);
void QLCDNumber_Overflow(QLCDNumber* self);
void QLCDNumber_Connect_Overflow(QLCDNumber* self, intptr_t slot);
bool QLCDNumber_Event(QLCDNumber* self, QEvent* e);
void QLCDNumber_PaintEvent(QLCDNumber* self, QPaintEvent* param1);
void QLCDNumber_OnMetaObject(const QLCDNumber* self, intptr_t slot);
QMetaObject* QLCDNumber_SuperMetaObject(const QLCDNumber* self);
void QLCDNumber_OnMetacast(QLCDNumber* self, intptr_t slot);
void* QLCDNumber_SuperMetacast(QLCDNumber* self, const char* param1);
void QLCDNumber_OnMetacall(QLCDNumber* self, intptr_t slot);
int QLCDNumber_SuperMetacall(QLCDNumber* self, int param1, int param2, void** param3);
void QLCDNumber_OnSizeHint(const QLCDNumber* self, intptr_t slot);
QSize* QLCDNumber_SuperSizeHint(const QLCDNumber* self);
void QLCDNumber_OnEvent(QLCDNumber* self, intptr_t slot);
bool QLCDNumber_SuperEvent(QLCDNumber* self, QEvent* e);
void QLCDNumber_OnPaintEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperPaintEvent(QLCDNumber* self, QPaintEvent* param1);
void QLCDNumber_ChangeEvent(QLCDNumber* self, QEvent* param1);
void QLCDNumber_OnChangeEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperChangeEvent(QLCDNumber* self, QEvent* param1);
void QLCDNumber_InitStyleOption(const QLCDNumber* self, QStyleOptionFrame* option);
void QLCDNumber_OnInitStyleOption(const QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperInitStyleOption(const QLCDNumber* self, QStyleOptionFrame* option);
int QLCDNumber_DevType(const QLCDNumber* self);
void QLCDNumber_OnDevType(const QLCDNumber* self, intptr_t slot);
int QLCDNumber_SuperDevType(const QLCDNumber* self);
void QLCDNumber_SetVisible(QLCDNumber* self, bool visible);
void QLCDNumber_OnSetVisible(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperSetVisible(QLCDNumber* self, bool visible);
QSize* QLCDNumber_MinimumSizeHint(const QLCDNumber* self);
void QLCDNumber_OnMinimumSizeHint(const QLCDNumber* self, intptr_t slot);
QSize* QLCDNumber_SuperMinimumSizeHint(const QLCDNumber* self);
int QLCDNumber_HeightForWidth(const QLCDNumber* self, int param1);
void QLCDNumber_OnHeightForWidth(const QLCDNumber* self, intptr_t slot);
int QLCDNumber_SuperHeightForWidth(const QLCDNumber* self, int param1);
bool QLCDNumber_HasHeightForWidth(const QLCDNumber* self);
void QLCDNumber_OnHasHeightForWidth(const QLCDNumber* self, intptr_t slot);
bool QLCDNumber_SuperHasHeightForWidth(const QLCDNumber* self);
QPaintEngine* QLCDNumber_PaintEngine(const QLCDNumber* self);
void QLCDNumber_OnPaintEngine(const QLCDNumber* self, intptr_t slot);
QPaintEngine* QLCDNumber_SuperPaintEngine(const QLCDNumber* self);
void QLCDNumber_MousePressEvent(QLCDNumber* self, QMouseEvent* event);
void QLCDNumber_OnMousePressEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperMousePressEvent(QLCDNumber* self, QMouseEvent* event);
void QLCDNumber_MouseReleaseEvent(QLCDNumber* self, QMouseEvent* event);
void QLCDNumber_OnMouseReleaseEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperMouseReleaseEvent(QLCDNumber* self, QMouseEvent* event);
void QLCDNumber_MouseDoubleClickEvent(QLCDNumber* self, QMouseEvent* event);
void QLCDNumber_OnMouseDoubleClickEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperMouseDoubleClickEvent(QLCDNumber* self, QMouseEvent* event);
void QLCDNumber_MouseMoveEvent(QLCDNumber* self, QMouseEvent* event);
void QLCDNumber_OnMouseMoveEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperMouseMoveEvent(QLCDNumber* self, QMouseEvent* event);
void QLCDNumber_WheelEvent(QLCDNumber* self, QWheelEvent* event);
void QLCDNumber_OnWheelEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperWheelEvent(QLCDNumber* self, QWheelEvent* event);
void QLCDNumber_KeyPressEvent(QLCDNumber* self, QKeyEvent* event);
void QLCDNumber_OnKeyPressEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperKeyPressEvent(QLCDNumber* self, QKeyEvent* event);
void QLCDNumber_KeyReleaseEvent(QLCDNumber* self, QKeyEvent* event);
void QLCDNumber_OnKeyReleaseEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperKeyReleaseEvent(QLCDNumber* self, QKeyEvent* event);
void QLCDNumber_FocusInEvent(QLCDNumber* self, QFocusEvent* event);
void QLCDNumber_OnFocusInEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperFocusInEvent(QLCDNumber* self, QFocusEvent* event);
void QLCDNumber_FocusOutEvent(QLCDNumber* self, QFocusEvent* event);
void QLCDNumber_OnFocusOutEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperFocusOutEvent(QLCDNumber* self, QFocusEvent* event);
void QLCDNumber_EnterEvent(QLCDNumber* self, QEnterEvent* event);
void QLCDNumber_OnEnterEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperEnterEvent(QLCDNumber* self, QEnterEvent* event);
void QLCDNumber_LeaveEvent(QLCDNumber* self, QEvent* event);
void QLCDNumber_OnLeaveEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperLeaveEvent(QLCDNumber* self, QEvent* event);
void QLCDNumber_MoveEvent(QLCDNumber* self, QMoveEvent* event);
void QLCDNumber_OnMoveEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperMoveEvent(QLCDNumber* self, QMoveEvent* event);
void QLCDNumber_ResizeEvent(QLCDNumber* self, QResizeEvent* event);
void QLCDNumber_OnResizeEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperResizeEvent(QLCDNumber* self, QResizeEvent* event);
void QLCDNumber_CloseEvent(QLCDNumber* self, QCloseEvent* event);
void QLCDNumber_OnCloseEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperCloseEvent(QLCDNumber* self, QCloseEvent* event);
void QLCDNumber_ContextMenuEvent(QLCDNumber* self, QContextMenuEvent* event);
void QLCDNumber_OnContextMenuEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperContextMenuEvent(QLCDNumber* self, QContextMenuEvent* event);
void QLCDNumber_TabletEvent(QLCDNumber* self, QTabletEvent* event);
void QLCDNumber_OnTabletEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperTabletEvent(QLCDNumber* self, QTabletEvent* event);
void QLCDNumber_ActionEvent(QLCDNumber* self, QActionEvent* event);
void QLCDNumber_OnActionEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperActionEvent(QLCDNumber* self, QActionEvent* event);
void QLCDNumber_DragEnterEvent(QLCDNumber* self, QDragEnterEvent* event);
void QLCDNumber_OnDragEnterEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperDragEnterEvent(QLCDNumber* self, QDragEnterEvent* event);
void QLCDNumber_DragMoveEvent(QLCDNumber* self, QDragMoveEvent* event);
void QLCDNumber_OnDragMoveEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperDragMoveEvent(QLCDNumber* self, QDragMoveEvent* event);
void QLCDNumber_DragLeaveEvent(QLCDNumber* self, QDragLeaveEvent* event);
void QLCDNumber_OnDragLeaveEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperDragLeaveEvent(QLCDNumber* self, QDragLeaveEvent* event);
void QLCDNumber_DropEvent(QLCDNumber* self, QDropEvent* event);
void QLCDNumber_OnDropEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperDropEvent(QLCDNumber* self, QDropEvent* event);
void QLCDNumber_ShowEvent(QLCDNumber* self, QShowEvent* event);
void QLCDNumber_OnShowEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperShowEvent(QLCDNumber* self, QShowEvent* event);
void QLCDNumber_HideEvent(QLCDNumber* self, QHideEvent* event);
void QLCDNumber_OnHideEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperHideEvent(QLCDNumber* self, QHideEvent* event);
bool QLCDNumber_NativeEvent(QLCDNumber* self, const libqt_string eventType, void* message, intptr_t* result);
void QLCDNumber_OnNativeEvent(QLCDNumber* self, intptr_t slot);
bool QLCDNumber_SuperNativeEvent(QLCDNumber* self, const libqt_string eventType, void* message, intptr_t* result);
int QLCDNumber_Metric(const QLCDNumber* self, int param1);
void QLCDNumber_OnMetric(const QLCDNumber* self, intptr_t slot);
int QLCDNumber_SuperMetric(const QLCDNumber* self, int param1);
void QLCDNumber_InitPainter(const QLCDNumber* self, QPainter* painter);
void QLCDNumber_OnInitPainter(const QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperInitPainter(const QLCDNumber* self, QPainter* painter);
QPaintDevice* QLCDNumber_Redirected(const QLCDNumber* self, QPoint* offset);
void QLCDNumber_OnRedirected(const QLCDNumber* self, intptr_t slot);
QPaintDevice* QLCDNumber_SuperRedirected(const QLCDNumber* self, QPoint* offset);
QPainter* QLCDNumber_SharedPainter(const QLCDNumber* self);
void QLCDNumber_OnSharedPainter(const QLCDNumber* self, intptr_t slot);
QPainter* QLCDNumber_SuperSharedPainter(const QLCDNumber* self);
void QLCDNumber_InputMethodEvent(QLCDNumber* self, QInputMethodEvent* param1);
void QLCDNumber_OnInputMethodEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperInputMethodEvent(QLCDNumber* self, QInputMethodEvent* param1);
QVariant* QLCDNumber_InputMethodQuery(const QLCDNumber* self, int param1);
void QLCDNumber_OnInputMethodQuery(const QLCDNumber* self, intptr_t slot);
QVariant* QLCDNumber_SuperInputMethodQuery(const QLCDNumber* self, int param1);
bool QLCDNumber_FocusNextPrevChild(QLCDNumber* self, bool next);
void QLCDNumber_OnFocusNextPrevChild(QLCDNumber* self, intptr_t slot);
bool QLCDNumber_SuperFocusNextPrevChild(QLCDNumber* self, bool next);
bool QLCDNumber_EventFilter(QLCDNumber* self, QObject* watched, QEvent* event);
void QLCDNumber_OnEventFilter(QLCDNumber* self, intptr_t slot);
bool QLCDNumber_SuperEventFilter(QLCDNumber* self, QObject* watched, QEvent* event);
void QLCDNumber_TimerEvent(QLCDNumber* self, QTimerEvent* event);
void QLCDNumber_OnTimerEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperTimerEvent(QLCDNumber* self, QTimerEvent* event);
void QLCDNumber_ChildEvent(QLCDNumber* self, QChildEvent* event);
void QLCDNumber_OnChildEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperChildEvent(QLCDNumber* self, QChildEvent* event);
void QLCDNumber_CustomEvent(QLCDNumber* self, QEvent* event);
void QLCDNumber_OnCustomEvent(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperCustomEvent(QLCDNumber* self, QEvent* event);
void QLCDNumber_ConnectNotify(QLCDNumber* self, const QMetaMethod* signal);
void QLCDNumber_OnConnectNotify(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperConnectNotify(QLCDNumber* self, const QMetaMethod* signal);
void QLCDNumber_DisconnectNotify(QLCDNumber* self, const QMetaMethod* signal);
void QLCDNumber_OnDisconnectNotify(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperDisconnectNotify(QLCDNumber* self, const QMetaMethod* signal);
void QLCDNumber_DrawFrame(QLCDNumber* self, QPainter* param1);
void QLCDNumber_OnDrawFrame(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperDrawFrame(QLCDNumber* self, QPainter* param1);
void QLCDNumber_UpdateMicroFocus(QLCDNumber* self);
void QLCDNumber_OnUpdateMicroFocus(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperUpdateMicroFocus(QLCDNumber* self);
void QLCDNumber_Create(QLCDNumber* self);
void QLCDNumber_OnCreate(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperCreate(QLCDNumber* self);
void QLCDNumber_Destroy(QLCDNumber* self);
void QLCDNumber_OnDestroy(QLCDNumber* self, intptr_t slot);
void QLCDNumber_SuperDestroy(QLCDNumber* self);
bool QLCDNumber_FocusNextChild(QLCDNumber* self);
void QLCDNumber_OnFocusNextChild(QLCDNumber* self, intptr_t slot);
bool QLCDNumber_SuperFocusNextChild(QLCDNumber* self);
bool QLCDNumber_FocusPreviousChild(QLCDNumber* self);
void QLCDNumber_OnFocusPreviousChild(QLCDNumber* self, intptr_t slot);
bool QLCDNumber_SuperFocusPreviousChild(QLCDNumber* self);
QObject* QLCDNumber_Sender(const QLCDNumber* self);
void QLCDNumber_OnSender(const QLCDNumber* self, intptr_t slot);
QObject* QLCDNumber_SuperSender(const QLCDNumber* self);
int QLCDNumber_SenderSignalIndex(const QLCDNumber* self);
void QLCDNumber_OnSenderSignalIndex(const QLCDNumber* self, intptr_t slot);
int QLCDNumber_SuperSenderSignalIndex(const QLCDNumber* self);
int QLCDNumber_Receivers(const QLCDNumber* self, const char* signal);
void QLCDNumber_OnReceivers(const QLCDNumber* self, intptr_t slot);
int QLCDNumber_SuperReceivers(const QLCDNumber* self, const char* signal);
bool QLCDNumber_IsSignalConnected(const QLCDNumber* self, const QMetaMethod* signal);
void QLCDNumber_OnIsSignalConnected(const QLCDNumber* self, intptr_t slot);
bool QLCDNumber_SuperIsSignalConnected(const QLCDNumber* self, const QMetaMethod* signal);
void QLCDNumber_Delete(QLCDNumber* self);

#ifdef __cplusplus
} /* extern C */
#endif

#endif